funcionando sumar y gastar puntos

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
     <div class="cliente" id='cargarpuntos'>
-      <form class="contenedor" action="/sumar" method="post">
+      <form class="contenedor" method="post">
         <table class='listaitems' id='listaitems'>
           <tr>
             <th>Item</th>
@@ -136,6 +136,42 @@
 
     </div>
 
+    <div class="cliente" id='usarpuntos'>
+      <form class="contenedor" method="post">
+        <table class='listaitems' id='listaitems2'>
+          <tr>
+            <th>Item</th>
+            <th>Cantidad</th>
+            <th>Precio</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th>Total</th>
+            <th> </th>
+            <th class='total' id='totalmonto2'></th>
+            <th> </th>
+          </tr>
+        </table>
+        <input type="button" id="enviarpuntosgastados" value="Usar">
+        <p>Puntos disponibles: <a id='puntosdisponibles'></a></p>
+      </form>
+
+      <div class="items">
+        <select name="selectitems" id='items2'>
+          <option value="Rubia|70|0">Rubia</option>
+          <option value="Negra|85|1">Negra</option>
+          <option value="Roja|75|2">Roja</option>
+          <option value="Temporada|95|3">Temporada</option>
+          <option value="Comida1|250|6">Comida1</option>
+          <option value="Comida2|185|6">Comida2</option>
+          <option value="Comida3|300|6">Comida3</option>
+          <option value="Coca|60|5">Coca</option>
+          <option value="Jugo|80|5">Jugo</option>
+        </select>
+        <input type="button" id="agregaritem2" value="Añadir item">
+      </div>
+
+    </div>
 
     <div class='front' id='front'>
       <div class="botonesfront">
@@ -154,9 +190,11 @@
 <script src="http://localhost:4000/socket.io/socket.io.js"></script>
 
 <script type="text/javascript">
+  //ARRAY PARA LLEVAR CUENTA DE LO QUE SE ENLISTA
   var consumos = [0,0,0,0,0,0,0];
   $('#cliente').hide();
   $('#cargarpuntos').hide();
+  $('#usarpuntos').hide();
   $('#registrar').click( function() {
     $("#body").load("./registrar");
   });
@@ -170,49 +208,102 @@
     $('#cargarpuntos').show('slow');
     $('#cliente').hide('slow');
   });
+  $('#usar').click( function() {
+    $('#usarpuntos').show('slow');
+    $('#cliente').hide('slow');
+    $('#puntosdisponibles').html($('#puntos').html());
+  });
   //AÑADIR ITEM CON SU NOMBRE, COSTO Y BOTON DE QUITAR
   $('#agregaritem').click( function() {
     var itemagregado = $('#items').val().split("|");
     consumos[itemagregado[2]]++;
-    console.log(itemagregado[2]);
-    var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><input class='sumarmismoitem' type='button' style='background-color: #109010; color: white' value='+'><input class='quitarmismoitem' type='button' style='background-color: #901010; color: white' value='-'><p class='cantitem' style='color:white'>1</p></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+    console.log(consumos);
+    var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' style='background-color: #109010; color: white' value='+'><input class='quitarmismoitem' type='button' style='background-color: #901010; color: white' value='-'></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
     $("#listaitems tr:last").prev('tr').after(markup);
     var montototal = Number(itemagregado[1]) + Number($('#totalmonto').html());
     $('#totalmonto').html(montototal);
   });
+  $('#agregaritem2').click( function() {
+    var itemagregado = $('#items2').val().split("|");
+    consumos[itemagregado[2]]++;
+    console.log(consumos);
+    var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><span class='cantitem' style='color:white'>1</span><input class='sumarmismoitem' type='button' style='background-color: #109010; color: white' value='+'><input class='quitarmismoitem' type='button' style='background-color: #901010; color: white' value='-'></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+    $("#listaitems2 tr:last").prev('tr').after(markup);
+    var montototal = Number(itemagregado[1]) + Number($('#totalmonto2').html());
+    $('#totalmonto2').html(montototal);
+  });
   //QUITAR ITEM
   $('#listaitems').on('click', '.quitardelista', function(){
-    consumos[itemagregado[2]] = consumos[itemagregado[2]] - Number($(this).parent().parent().find('p').html());
     var montototal = Number($('#totalmonto').html()) - Number($(this).parent().parent().find('.monto').html());
+    consumos[Number($(this).parent().parent().attr('class'))] = consumos[Number($(this).parent().parent().attr('class'))]-Number($(this).parent().parent().find('span').html());
     $(this).closest('tr').remove();
     $('#totalmonto').html(montototal.toString());
+  });
+  $('#listaitems2').on('click', '.quitardelista', function(){
+    var montototal = Number($('#totalmonto2').html()) - Number($(this).parent().parent().find('.monto').html());
+    consumos[Number($(this).parent().parent().attr('class'))] = consumos[Number($(this).parent().parent().attr('class'))]-Number($(this).parent().parent().find('span').html());
+    $(this).closest('tr').remove();
+    $('#totalmonto2').html(montototal.toString());
   });
   //CAMBIAR CANTIDAD DE UN ITEM
   //Agregar
   $('#listaitems').on('click', '.sumarmismoitem', function(){
     consumos[Number($(this).parent().parent().attr('class'))]++;
     console.log(consumos);
-    var montoitem = Number($(this).parent().parent().find('.monto').html()) + Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('p').html());
-    var cantitems = Number($(this).parent().parent().find('p').html()) + 1
+    var montoitem = Number($(this).parent().parent().find('.monto').html()) + Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('span').html());
+    var cantitems = Number($(this).parent().parent().find('span').html()) + 1
     $(this).parent().parent().find('.monto').html(montoitem);
-    $(this).parent().parent().find('p').html(cantitems);
-    var montototal = Number($('#totalmonto').html()) + montoitem / Number($(this).parent().parent().find('p').html());
+    $(this).parent().parent().find('span').html(cantitems);
+    var montototal = Number($('#totalmonto').html()) + montoitem / Number($(this).parent().parent().find('span').html());
     $('#totalmonto').html(montototal.toString());
+  });
+  $('#listaitems2').on('click', '.sumarmismoitem', function(){
+    consumos[Number($(this).parent().parent().attr('class'))]++;
+    console.log(consumos);
+    var montoitem = Number($(this).parent().parent().find('.monto').html()) + Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('span').html());
+    var cantitems = Number($(this).parent().parent().find('span').html()) + 1
+    $(this).parent().parent().find('.monto').html(montoitem);
+    $(this).parent().parent().find('span').html(cantitems);
+    var montototal = Number($('#totalmonto2').html()) + montoitem / Number($(this).parent().parent().find('span').html());
+    $('#totalmonto2').html(montototal.toString());
   });
   //Quitar
   $('#listaitems').on('click', '.quitarmismoitem', function(){
-    if (Number($(this).parent().parent().find('p').html()) > 1) {
+    if (Number($(this).parent().parent().find('span').html()) > 1) {
       consumos[Number($(this).parent().parent().attr('class'))]--;
       console.log(consumos);
-      var montoitem = Number($(this).parent().parent().find('.monto').html()) - Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('p').html());
-      var cantitems = Number($(this).parent().parent().find('p').html()) - 1
+      var montoitem = Number($(this).parent().parent().find('.monto').html()) - Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('span').html());
+      var cantitems = Number($(this).parent().parent().find('span').html()) - 1
       $(this).parent().parent().find('.monto').html(montoitem);
-      $(this).parent().parent().find('p').html(cantitems);
-      var montototal = Number($('#totalmonto').html()) - montoitem / Number($(this).parent().parent().find('p').html());
+      $(this).parent().parent().find('span').html(cantitems);
+      var montototal = Number($('#totalmonto').html()) - montoitem / Number($(this).parent().parent().find('span').html());
       $('#totalmonto').html(montototal.toString());
     }
   });
+  $('#listaitems2').on('click', '.quitarmismoitem', function(){
+    if (Number($(this).parent().parent().find('span').html()) > 1) {
+      consumos[Number($(this).parent().parent().attr('class'))]--;
+      console.log(consumos);
+      var montoitem = Number($(this).parent().parent().find('.monto').html()) - Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('span').html());
+      var cantitems = Number($(this).parent().parent().find('span').html()) - 1
+      $(this).parent().parent().find('.monto').html(montoitem);
+      $(this).parent().parent().find('span').html(cantitems);
+      var montototal = Number($('#totalmonto2').html()) - montoitem / Number($(this).parent().parent().find('span').html());
+      $('#totalmonto2').html(montototal.toString());
+    }
+  });
+
+
+  $("body").on('DOMSubtreeModified', "#listaitems2", function() {
+    if ( Number($('#totalmonto2').html()) > Number($('#puntosdisponibles').html())) {
+      alert("Puntos excedidos!");
+      $('#enviarpuntosgastados').prop('disabled', true);
+    } else {
+      $('#enviarpuntosgastados').prop('disabled', false);
+    }
+  });
   //CREO FORM PARA MANDAR CON LOS DATOS
+  //SUMAR
   $('#enviarpuntos').click(function() {
     event.preventDefault();
     var puntosForm = jQuery('<form>', {
@@ -226,6 +317,60 @@
     puntosForm.append(jQuery('<input>', {
         'name': 'monto',
         'value': $('#totalmonto').html(),
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'comida',
+        'value': consumos[6],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'rubia',
+        'value': consumos[0],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'negra',
+        'value': consumos[1],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'roja',
+        'value': consumos[2],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'temporada',
+        'value': consumos[3],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'otroalcohol',
+        'value': consumos[4],
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'salcohol',
+        'value': consumos[5],
+        'type': 'hidden'
+    }))
+    $(document.body).append(puntosForm);
+    puntosForm.submit();
+  });
+  //USAR
+  $('#enviarpuntosgastados').click(function() {
+    event.preventDefault();
+    var puntosForm = jQuery('<form>', {
+        'action': '/gastar',
+        'method': 'post'
+    }).append(jQuery('<input>', {
+        'name': 'tarjeta',
+        'value': $('#tarjeta').html(),
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'monto',
+        'value': $('#totalmonto2').html(),
         'type': 'hidden'
     }));
     puntosForm.append(jQuery('<input>', {
