--- a/registrar.html
+++ b/registrar.html
@@ -21,7 +21,7 @@
     <form class="contenedor" action="/registrar" method="post" id='formularioregistro'>
       <input type="number" name='documento' id="documento" placeholder="Documento del cliente" autofocus> <img id='alert1' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <input type="date" name='nacimiento' id="nacimiento"> <img id='alert2' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
-      <select name='sexo' id='sexo'>
+      <select name='sexo' id='sexo' style='width:30%'>
         <option value="" disabled selected>Seleccione</option>
         <option value="m">Masculino</option>
         <option value="f">Femenino</option>
